File Upload UI Improved
Added drag n drop
added placeholder picture

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -47,6 +47,15 @@
             <span class="close-button">&times;</span>
             <h2>Upload a photo</h2>
             <input type="file" id="file-input" accept="image/*">
+            <div id="preview-container" class="drag-and-drop">
+                <label for="file-input">
+                    <img id="preview-image" src="assets/icons/camera.png" alt="Preview" class="preview-image">
+                    <p>Drag & Drop your image here or click to upload</p>
+                </label>
+            </div>
+            <label for="file-input" class="custom-file-upload">
+                Choose File
+            </label>
         </div>
     </div>
 
