--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,9 @@
                 <div id="fade-overlay" class="fade-overlay"></div>
             </div>
             <div class="diary-button">
-                <img src="assets/icons/diary.png" class="diary-icon" alt="Diary">
+                <button id="diary-button" class="diary-button">
+                    <img src="assets/icons/diary.png" class="diary-icon" alt="Diary">
+                </button>
             </div>
             <button id="menu-button" class="menu-button">menu</button>
             <div class="content">
@@ -56,6 +58,13 @@
             <label for="file-input" class="custom-file-upload">
                 Choose File
             </label>
+        </div>
+    </div>
+
+    <div id="diary-modal" class="diary-modal">
+        <div class="diary-modal-content">
+            <span class="diary-close-button">&times;</span>
+            <h2>add diary history</h2>
         </div>
     </div>
 
