Added upload food line

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -47,10 +47,14 @@
         </button>
     </div>
 
+    <div class="upload-line">
+        <h1>Frogbro is hungry! Feed frogbro by uploading your meal!</h1>
+    </div>
+
     <div id="upload-modal" class="modal">
         <div class="modal-content">
             <span class="close-button">&times;</span>
-            <h2>Upload a photo</h2>
+            <h2>Upload a picture of food!</h2>
             <input type="file" id="file-input" accept="image/*">
             <div id="preview-container" class="drag-and-drop">
                 <label for="file-input">
