UI Fixes and small stuff
Changed formatting of image containers
formatted time to gmt+8 correctly
added a clock at the bottom
added the version at the bottom

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -98,6 +98,9 @@
                 </form>
         </div>
     </div>
+    <div id="live-clock" class="live-clock"></div>
+    <div id="version-info" class="version-info">Nomsters Web V1.0</div>
+    <script src="script.js"></script>
 
     <audio id="background-music" loop>
         <source src="assets/music/beach.wav" type="audio/wav">
@@ -105,5 +108,10 @@
     </audio>
 
     <script src="script.js"></script>
+
+    <div id="live-clock" class="live-clock"></div>
+    <div id="version-info" class="version-info">Nomsters Web V1.0</div>
+    <script src="script.js"></script>
+
 </body>
 </html>
